--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
         uses: Platane/snk@master
         id: snake-gif
         with:
-          github_user_name: tu_usuario  # Reemplaza con tu nombre de usuario de GitHub
+          github_user_name: marcSerrano2613  # Reemplaza con tu nombre de usuario de GitHub
           gif_out_path: dist/github-contribution-grid-snake.gif
           svg_out_path: dist/github-contribution-grid-snake.svg
 
